--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@ footer{padding:40px;text-align:center;color:rgba(255,255,255,0.85);font-size:0.9
       <div class="brand">StudioVyne</div>
     </div>
     <nav class="primary">
-      <a href="landing.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="contact.html">CONTACT</a>
       <a href="help.html">HELP</a>
       
