Change HOME link from landing.html to index.html

--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@ footer{padding:40px 20px;text-align:center;color:rgba(255,255,255,0.85);font-siz
       <div class="brand">StudioVyne</div>
     </div>
     <nav class="primary">
-      <a href="landing.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="help.html" class="active">HELP</a>
     </nav>
   </header>
