Change HOME link to point to index.html

--- a/help.html
+++ b/help.html
@@ -141,7 +141,7 @@ footer { padding: 40px 20px; text-align: center; color: rgba(255,255,255,0.85); 
       <div class="brand">StudioVyne</div>
     </div>
     <nav class="primary">
-      <a href="landing.html">HOME</a>
+      <a href="index.html">HOME</a>
       
       <a href="contact.html">CONTACT</a>
     </nav>
