--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
   --glass-bg: rgba(255,255,255,0.08);
   --glass-border: rgba(255,255,255,0.18);
 }
+
+/* RESET */
 *{margin:0;padding:0;box-sizing:border-box}
 body{
   font-family:Inter,sans-serif;
@@ -24,43 +26,202 @@ body{
   overflow-x:hidden;
   background:
     radial-gradient(circle at 20% 20%,rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.8) 60%),
-    url('https://images.unsplash.com/photo-1714459830992-afb1f10b0beb?ixlib=rb-4.1.0&auto=format&fit=crop&q=80&w=1600')
-      no-repeat center center / cover;
+    url('https://images.unsplash.com/photo-1714459830992-afb1f10b0beb?auto=format&fit=crop&q=80&w=1600')
+    no-repeat center center / cover;
   background-attachment:fixed;
 }
 
-/* NAVBAR */
-.nav-wrap{position:fixed;top:18px;left:0;right:0;display:flex;justify-content:center;z-index:220;}
-.nav{width:98%;max-width:1400px;height:84px;border-radius:20px;padding:12px 28px;display:flex;align-items:center;justify-content:space-between;background:rgba(255,255,255,0.08);backdrop-filter:blur(10px);box-shadow:0 20px 60px rgba(0,0,0,0.5);}
+/* ---------------- NAV ---------------- */
+.nav-wrap{
+  position:fixed;top:18px;left:0;right:0;
+  display:flex;justify-content:center;z-index:220;
+}
+
+.nav{
+  width:98%;max-width:1400px;height:84px;
+  border-radius:20px;padding:12px 28px;
+  display:flex;align-items:center;justify-content:space-between;
+  background:rgba(255,255,255,0.08);
+  backdrop-filter:blur(10px);
+  box-shadow:0 20px 60px rgba(0,0,0,0.5);
+}
+
 .brand-wrap{display:flex;align-items:center;gap:12px;}
-.brand-logo{width:48px;height:48px;border-radius:50%;object-fit:cover;background:#111;box-shadow:0 0 12px rgba(255,190,160,0.4);}
-.brand{font-family:'Space Grotesk',sans-serif;font-weight:800;font-size:1.4rem;background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-shadow:0 0 12px rgba(255,190,160,0.4);}
+.brand-logo{
+  width:48px;height:48px;border-radius:50%;
+  object-fit:cover;background:#111;
+  box-shadow:0 0 12px rgba(255,190,160,0.4);
+}
+.brand{
+  font-family:'Space Grotesk';
+  font-weight:800;font-size:1.4rem;
+  background:var(--accent-grad);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  text-shadow:0 0 12px rgba(255,190,160,0.4);
+}
+
 nav.primary{display:flex;gap:40px;align-items:center;}
-nav.primary a{position:relative;color:white;text-decoration:none;font-family:'Space Grotesk',sans-serif;font-weight:800;font-size:16px;padding:12px 8px;transition:transform .3s ease,opacity .3s ease;}
+nav.primary a{
+  color:white;text-decoration:none;font-family:'Space Grotesk';
+  font-weight:800;font-size:16px;padding:12px 8px;
+  position:relative;transition:.25s;
+}
 nav.primary a:hover{transform:translateY(-2px);}
-nav.primary a::after{content:"";position:absolute;bottom:-6px;left:0;height:3px;width:0%;background:linear-gradient(90deg,#ff66c1,#ffd18c);border-radius:4px;box-shadow:0 0 12px rgba(255,190,160,0.5);transition:width .35s ease;}
+nav.primary a::after{
+  content:"";position:absolute;bottom:-6px;left:0;height:3px;width:0%;
+  background:linear-gradient(90deg,#ff66c1,#ffd18c);
+  border-radius:4px;box-shadow:0 0 12px rgba(255,190,160,0.5);
+  transition:width .35s;
+}
 nav.primary a:hover::after{width:100%;}
 
-/* HERO */
-.hero{display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:80vh;text-align:center;padding-top:140px;padding-left:20px;padding-right:20px;}
-.hero-title{font-family:'Space Grotesk',sans-serif;font-weight:800;font-size:clamp(2.6rem,6vw,4.2rem);background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-shadow:0 0 15px rgba(255,200,170,0.4);margin-bottom:12px;}
-.hero-sub{font-size:1.2rem;opacity:0.9;max-width:700px;line-height:1.6;}
+/* ---------------- HAMBURGER ---------------- */
+.menu-btn{
+  width:34px;height:18px;
+  display:none;flex-direction:column;
+  justify-content:space-between;
+  cursor:pointer;
+}
+.menu-line{
+  height:3px;background:white;border-radius:6px;
+  transition:.35s ease;
+}
+.menu-btn.active .menu-line:nth-child(1){
+  transform:translateY(7px) rotate(45deg);
+}
+.menu-btn.active .menu-line:nth-child(2){
+  transform:translateY(-7px) rotate(-45deg);
+}
 
-/* CARDS */
-.cards-section{padding:100px 20px 160px;display:flex;flex-direction:column;align-items:center;gap:120px;position:relative;z-index:2;}
-.card{display:flex;align-items:center;gap:60px;max-width:1200px;width:100%;min-height:400px;background:var(--glass-bg);border-radius:25px;border:1px solid var(--glass-border);box-shadow:0 0 60px rgba(255,170,190,0.35),0 0 120px rgba(255,210,140,0.25);backdrop-filter:blur(12px);padding:25px;overflow:hidden;opacity:0;transform:translateY(60px);}
-.card:nth-child(even){flex-direction:row-reverse;}
-.media{width:40%;border-radius:25px;overflow:hidden;box-shadow:0 20px 60px rgba(0,0,0,0.4);}
-.media img{width:100%;height:100%;object-fit:cover;border-radius:25px;transition:transform 1s ease;}
+@media(max-width:768px){
+  nav.primary{display:none}
+  .menu-btn{display:flex}
+}
+
+/* ---------------- FLOATING DROPDOWN ---------------- */
+.mobile-dropdown{
+  position:fixed;
+  top:115px; /* floating gap */
+  left:50%;
+  transform:translateX(-50%);
+  width:88%;
+  max-width:820px;
+
+  background:rgba(255,255,255,0.015);
+  backdrop-filter:blur(4px);
+  -webkit-backdrop-filter:blur(4px);
+
+  border:1px solid rgba(255,255,255,0.10);
+  border-radius:16px;
+
+  padding:14px 0;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:10px;
+
+  opacity:0;
+  pointer-events:none;
+  transform-origin:top center;
+  transform:translate(-50%, -14px);
+  transition:opacity .22s ease, transform .22s ease;
+
+  z-index:3000;
+}
+.mobile-dropdown.active{
+  opacity:1;
+  pointer-events:auto;
+  transform:translate(-50%, 0);
+}
+.mobile-dropdown a{
+  font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:0.95rem;
+  letter-spacing:1.4px;
+  color:white;
+  text-decoration:none;
+}
+
+/* ---------------- HERO ---------------- */
+.hero{
+  display:flex;flex-direction:column;
+  align-items:center;justify-content:center;
+  min-height:80vh;text-align:center;
+  padding-top:140px;padding-left:20px;padding-right:20px;
+}
+.hero-title{
+  font-family:'Space Grotesk';font-weight:800;
+  font-size:clamp(2.6rem,6vw,4.2rem);
+  background:var(--accent-grad);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  margin-bottom:12px;
+}
+.hero-sub{
+  font-size:1.2rem;opacity:0.9;
+  max-width:700px;line-height:1.6;
+}
+
+/* ---------------- CARDS ---------------- */
+.cards-section{
+  padding:100px 20px 160px;
+  display:flex;flex-direction:column;
+  align-items:center;gap:120px;
+  position:relative;z-index:2;
+}
+
+.card{
+  display:flex;align-items:center;
+  gap:60px;max-width:1200px;width:100%;
+  min-height:400px;background:var(--glass-bg);
+  border-radius:25px;border:1px solid var(--glass-border);
+  box-shadow:0 0 60px rgba(255,170,190,0.35),
+             0 0 120px rgba(255,210,140,0.25);
+  backdrop-filter:blur(12px);
+  padding:25px;overflow:hidden;
+  opacity:0;transform:translateY(60px);
+}
+
+/* only reverse order on large screens */
+@media(min-width:901px){
+  .card:nth-child(even){flex-direction:row-reverse;}
+}
+
+.media{
+  width:40%;border-radius:25px;
+  overflow:hidden;box-shadow:0 20px 60px rgba(0,0,0,0.4);
+}
+.media img{
+  width:100%;height:100%;
+  object-fit:cover;border-radius:25px;
+  transition:transform 1s ease;
+}
 .card:hover .media img{transform:scale(1.05);}
-.text{width:60%;text-align:center;display:flex;flex-direction:column;align-items:center;justify-content:center;}
-.text h2{font-family:'Space Grotesk',sans-serif;font-weight:800;margin-bottom:15px;font-size:2.2rem;background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-shadow:0 0 18px rgba(255,200,170,0.4);}
-.text p{opacity:0.9;margin-bottom:25px;max-width:520px;line-height:1.7;font-size:1.1rem;}
 
-/* ✅ FIXED BUTTON (with cinematic hover pulse) */
+.text{
+  width:60%;text-align:center;
+  display:flex;flex-direction:column;
+  align-items:center;justify-content:center;
+}
+.text h2{
+  font-family:'Space Grotesk';font-weight:800;
+  margin-bottom:15px;font-size:2.2rem;
+  background:var(--accent-grad);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+.text p{
+  opacity:0.9;margin-bottom:25px;
+  max-width:520px;line-height:1.7;font-size:1.1rem;
+}
+
+/* word spans (inline-block so stagger works) */
+.word { display:inline-block; opacity:0; transform:translateY(18px); margin-right:6px; }
+
+/* BUTTON */
 .btn {
   position: relative;
-  display: inline-block;
   padding: 12px 26px;
   border-radius: 999px;
   border: 1px solid rgba(255,255,255,0.4);
@@ -69,42 +230,31 @@ nav.primary a:hover::after{width:100%;}
   font-weight: 700;
   cursor: pointer;
   overflow: hidden;
-  transition: transform .25s cubic-bezier(.22,1.28,.34,1.01), box-shadow .3s ease;
+  transition: transform .25s cubic-bezier(.22,1.28,.34,1.01);
 }
 .btn .fill {
-  position: absolute;
-  inset: 0;
+  position: absolute;inset: 0;
   border-radius: inherit;
   background: var(--accent-grad);
   transform: scaleX(0);
-  transform-origin: left;
-  transition: transform .4s ease;
-  z-index: -1;
+  transform-origin:left;
+  transition:.4s ease;
+  z-index:-1;
 }
-
-/* hover pop with glow + subtle pulse */
-.btn:hover {
-  transform: scale(1.12) translateY(-2px);
-  box-shadow: 0 0 30px rgba(255,190,160,0.55);
-}
-.btn:hover .fill {
-  transform: scaleX(1);
-}
-.btn:active {
-  transform: scale(0.96) translateY(1px);
-  box-shadow: 0 0 15px rgba(255,190,160,0.3);
-}
+.btn:hover { transform: scale(1.12) translateY(-2px); }
+.btn:hover .fill { transform: scaleX(1); }
 
 /* FOOTER */
-footer{padding:40px;text-align:center;color:rgba(255,255,255,0.85);font-size:0.9rem;}
+footer{
+  padding:40px;text-align:center;
+  color:rgba(255,255,255,0.85);
+  font-size:0.9rem;
+}
 
 @media(max-width:900px){
   .card{flex-direction:column;gap:30px;}
   .media,.text{width:100%;}
 }
-
-/* helper */
-.word { white-space:pre-wrap; }
 </style>
 </head>
 <body>
@@ -113,16 +263,28 @@ footer{padding:40px;text-align:center;color:rgba(255,255,255,0.85);font-size:0.9
 <div class="nav-wrap">
   <header class="nav">
     <div class="brand-wrap">
-      <img src="studiologo.png" alt="StudioVyne Logo" class="brand-logo">
+      <img src="studiologo.png" class="brand-logo" alt="StudioVyne">
       <div class="brand">StudioVyne</div>
     </div>
+    
     <nav class="primary">
       <a href="index.html">HOME</a>
       <a href="contact.html">CONTACT</a>
       <a href="help.html">HELP</a>
-      
     </nav>
+
+    <div class="menu-btn" id="menuBtn">
+      <div class="menu-line"></div>
+      <div class="menu-line"></div>
+    </div>
   </header>
+</div>
+
+<!-- FLOATING DROPDOWN -->
+<div class="mobile-dropdown" id="mobileDropdown">
+  <a href="index.html">HOME</a>
+  <a href="contact.html">CONTACT</a>
+  <a href="help.html">HELP</a>
 </div>
 
 <!-- HERO -->
@@ -160,7 +322,7 @@ footer{padding:40px;text-align:center;color:rgba(255,255,255,0.85);font-size:0.9
 
   <div class="card">
     <div class="media">
-      <img src="https://plus.unsplash.com/premium_photo-1661589359769-44f3eb66b5db?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1740" alt="Our Focus">
+      <img src="https://plus.unsplash.com/premium_photo-1661589359769-44f3eb66b5db?auto=format&fit=crop&q=80&w=1740" alt="Our Focus">
     </div>
     <div class="text">
       <h2>Our Focus</h2>
@@ -174,39 +336,73 @@ footer{padding:40px;text-align:center;color:rgba(255,255,255,0.85);font-size:0.9
 <footer>© 2025 StudioVyne — Crafted with care</footer>
 
 <script>
+/* HAMBURGER + DROPDOWN */
+const ham = document.getElementById("menuBtn");
+const dropdown = document.getElementById("mobileDropdown");
+
+ham.addEventListener("click", (e) => {
+  e.stopPropagation();
+  ham.classList.toggle("active");
+  dropdown.classList.toggle("active");
+});
+
+/* Close when clicking a menu link */
+dropdown.querySelectorAll("a").forEach(a=>{
+  a.addEventListener("click",()=>{
+    ham.classList.remove("active");
+    dropdown.classList.remove("active");
+  });
+});
+
+/* Click outside to close */
+document.addEventListener("click",e=>{
+  if (!ham.contains(e.target) && !dropdown.contains(e.target)) {
+    ham.classList.remove("active");
+    dropdown.classList.remove("active");
+  }
+});
+
+/* CARD + WORD ANIMATIONS */
 if (window.gsap && window.ScrollTrigger) {
   gsap.registerPlugin(ScrollTrigger);
 
-  document.querySelectorAll('.card p').forEach(p => {
+  // prepare words for each paragraph
+  document.querySelectorAll('.card .text p').forEach(p => {
     const raw = p.textContent.trim();
-    const words = raw.split(/\s+/);
-    p.innerHTML = words.map(w => `<span class="word" style="display:inline-block;opacity:0;transform:translateY(18px);margin-right:6px">${w}</span>`).join(' ');
+    const words = raw.split(/\s+/).map(w=>w.replace(/\s+$/,''));
+    p.innerHTML = words.map(w => `<span class="word">${w}</span>`).join(' ');
   });
 
-  gsap.utils.toArray('.card').forEach((card) => {
+  gsap.utils.toArray('.card').forEach((card, i) => {
     const media = card.querySelector('.media');
     const title = card.querySelector('h2');
     const words = card.querySelectorAll('.word');
     const btn = card.querySelector('.btn');
 
     const tl = gsap.timeline({ paused: true });
-    tl.to(card, {opacity: 1, y: 0, duration: 0.7, ease: "power3.out" }, 0);
-    if (media) tl.from(media, {opacity: 0, y: 30, duration: 0.9, ease: "power3.out"}, 0.05);
-    if (title) tl.from(title, {opacity: 0, y: 12, duration: 0.6, ease: "power2.out"}, 0.12);
-    if (words && words.length) tl.to(words, {opacity:1, y:0, stagger:0.05, duration:0.35, ease:"power2.out"}, 0.25);
-    if (btn) tl.from(btn, {opacity:0, scale:0.92, duration:0.45, ease:"back.out(1.6)"}, 0.6);
+    // card base
+    tl.to(card, {opacity: 1, y: 0, duration: 0.6, ease: "power3.out"}, 0);
+    // media
+    if (media) tl.from(media, {opacity: 0, y: 24, duration: 0.7, ease: "power3.out"}, 0.05);
+    // title
+    if (title) tl.from(title, {opacity: 0, y: 12, duration: 0.45, ease: "power2.out"}, 0.12);
+    // words stagger
+    if (words && words.length) tl.to(words, {opacity:1, y:0, stagger:0.04, duration:0.35, ease:"power2.out"}, 0.24);
+    // button pop
+    if (btn) tl.from(btn, {opacity:0, scale:0.94, duration:0.45, ease:"back.out(1.6)"}, 0.6);
 
     ScrollTrigger.create({
       trigger: card,
-      start: "top 80%",
+      start: "top 82%",
       end: "bottom 20%",
-      toggleActions: "play reverse play reverse",
       onEnter: () => tl.play(),
       onEnterBack: () => tl.play(),
       onLeave: () => tl.reverse(),
-      onLeaveBack: () => tl.reverse()
+      onLeaveBack: () => tl.reverse(),
+      // markers: true
     });
 
+    // initial state for all cards:
     gsap.set(card, { y: 60, opacity: 0 });
   });
 }
