--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,13 @@
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%;scroll-behavior:smooth}
 body{
-  font-family:Inter,system-ui,-apple-system;
+  font-family:Inter,system-ui;
   background:#000;
   color:#fff;
   -webkit-font-smoothing:antialiased;
 }
 
-/* ---------------- NAV (MATCHING LANDING PAGE) ---------------- */
+/* ---------------- NAV ---------------- */
 .nav-wrap{
   position:fixed;
   top:18px;
@@ -57,86 +57,44 @@ body{
   box-shadow:0 20px 60px rgba(0,0,0,0.5);
 }
 
-.brand-wrap{
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
-
+.brand-wrap{display:flex;align-items:center;gap:12px}
 .brand-logo{
-  width:48px;
-  height:48px;
-  border-radius:50%;
-  object-fit:cover;
-  box-shadow:0 0 12px rgba(255,190,160,0.4);
+  width:48px;height:48px;border-radius:50%;object-fit:cover;
+  box-shadow:0 0 12px rgba(255,190,160,0.4)
 }
 
 .brand{
-  font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:1.4rem;
-  background:var(--accent-grad);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  font-family:'Space Grotesk';font-weight:800;font-size:1.4rem;
+  background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;
   text-shadow:0 0 12px rgba(255,190,160,0.4);
 }
 
-nav.primary{
-  display:flex;
-  gap:40px;
-  align-items:center;
-}
-
+nav.primary{display:flex;gap:40px;align-items:center}
 nav.primary a{
-  color:white;
-  text-decoration:none;
-  font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:16px;
-  padding:12px 8px;
-  position:relative;
-  transition:.25s;
+  color:white;text-decoration:none;font-family:'Space Grotesk';
+  font-weight:800;font-size:16px;padding:12px 8px;position:relative;transition:.25s;
 }
-
-nav.primary a:hover{
-  transform:translateY(-2px);
-}
-
+nav.primary a:hover{transform:translateY(-2px)}
 nav.primary a::after{
-  content:"";
-  position:absolute;
-  bottom:-6px;
-  left:0;
-  height:3px;
-  width:0%;
-  background:linear-gradient(90deg,#ff66c1,#ffd18c);
-  border-radius:4px;
-  box-shadow:0 0 12px rgba(255,190,160,0.5);
-  transition:width .35s;
+  content:"";position:absolute;bottom:-6px;left:0;height:3px;width:0%;
+  background:linear-gradient(90deg,#ff66c1,#ffd18c);border-radius:4px;
+  box-shadow:0 0 12px rgba(255,190,160,0.5);transition:width .35s
 }
-
 nav.primary a:hover::after{width:100%}
 
 /* HAMBURGER */
 .menu-btn{
-  width:34px;
-  height:18px;
-  display:none;
-  flex-direction:column;
-  justify-content:space-between;
-  cursor:pointer;
+  width:34px;height:18px;display:none;
+  flex-direction:column;justify-content:space-between;cursor:pointer;
 }
 .menu-line{
-  height:3px;
-  background:white;
-  border-radius:6px;
-  transition:.35s;
+  height:3px;background:white;border-radius:6px;transition:.35s;
 }
 .menu-btn.active .menu-line:nth-child(1){
-  transform:translateY(7px) rotate(45deg);
+  transform:translateY(7px) rotate(45deg)
 }
 .menu-btn.active .menu-line:nth-child(2){
-  transform:translateY(-7px) rotate(-45deg);
+  transform:translateY(-7px) rotate(-45deg)
 }
 
 @media(max-width:768px){
@@ -144,91 +102,85 @@ nav.primary a:hover::after{width:100%}
   .menu-btn{display:flex}
 }
 
-/* MOBILE MENU */
-.mobile-menu{
+/* ---------------- NEW FLOATING DROPDOWN ---------------- */
+.mobile-dropdown{
   position:fixed;
-  top:90px;
-  right:20px;
-  width:200px;
-  background:rgba(255,255,255,0.1);
-  backdrop-filter:blur(12px);
+  top:115px; /* elegant floating gap */
+  left:50%;
+  transform:translateX(-50%);
+  width:88%;
+  max-width:820px;
+
+  background:rgba(255,255,255,0.015);
+  backdrop-filter:blur(4px);
+  -webkit-backdrop-filter:blur(4px);
+
+  border:1px solid rgba(255,255,255,0.10);
   border-radius:16px;
-  padding:20px;
+
+  padding:14px 0;
   display:flex;
   flex-direction:column;
-  gap:14px;
+  align-items:center;
+  gap:10px;
+
   opacity:0;
   pointer-events:none;
-  transform:translateY(-12px);
-  transition:.3s;
-  z-index:999;
+  transform-origin:top center;
+  transform:translate(-50%, -14px);
+  transition:opacity .22s ease, transform .22s ease;
+
+  z-index:3000;
 }
-.mobile-menu.active{
+
+.mobile-dropdown.active{
   opacity:1;
   pointer-events:auto;
-  transform:translateY(0);
+  transform:translate(-50%, 0);
 }
-.mobile-menu a{
-  color:white;
-  text-decoration:none;
-  font-weight:800;
+
+.mobile-dropdown a{
   font-family:'Space Grotesk';
+  font-weight:800;
+  font-size:0.95rem;
+  letter-spacing:1.4px;
+  text-decoration:none;
+  color:white;
 }
 
 /* ---------------- HERO ---------------- */
 .hero{
   min-height:70vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  padding:48px 20px;
-  text-align:center;
+  display:flex;align-items:center;justify-content:center;
+  padding:48px 20px;text-align:center;
   background-image:url('https://images.unsplash.com/photo-1760784879929-eb7ea4ee6958?auto=format&fit=crop&w=1740&q=80');
-  background-size:cover;
-  background-position:center;
-  position:relative;
+  background-size:cover;background-position:center;position:relative;
 }
 .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,0.5)}
 .hero-inner{position:relative;z-index:2}
+
 .hero h1{
-  font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:clamp(2.4rem,5vw,3.8rem);
-  margin-bottom:10px;
-  background:var(--accent-grad);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  font-family:'Space Grotesk';font-weight:800;
+  font-size:clamp(2.4rem,5vw,3.8rem);margin-bottom:10px;
+  background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;
 }
-.hero p{
-  color:rgba(255,255,255,0.9);
-  margin-bottom:12px;
-  font-size:1.05rem;
-}
+.hero p{color:rgba(255,255,255,0.9);margin-bottom:12px;font-size:1.05rem}
 .down-symbol{margin-top:8px;font-size:1.6rem;opacity:.8;animation:bob 1.6s infinite}
 @keyframes bob{0%,100%{transform:translateY(0)}50%{transform:translateY(6px)}}
 
 /* ---------------- SECTION ---------------- */
 .section{
-  max-width:var(--max);
-  margin:0 auto;
+  max-width:var(--max);margin:0 auto;
   padding:70px 20px 110px;
 }
 .title{
-  font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:clamp(2rem,4vw,3.2rem);
-  text-align:center;
-  margin-bottom:12px;
-  background:var(--accent-grad);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  font-family:'Space Grotesk';font-weight:800;
+  font-size:clamp(2rem,4vw,3.2rem);text-align:center;margin-bottom:12px;
+  background:var(--accent-grad);-webkit-background-clip:text;-webkit-text-fill-color:transparent;
 }
 .desc{
-  text-align:center;
-  max-width:900px;
-  margin:0 auto 32px;
-  color:rgba(255,255,255,0.88);
-  font-size:1.04rem;
+  text-align:center;max-width:900px;margin:0 auto 32px;
+  color:rgba(255,255,255,0.88);font-size:1.04rem;
 }
 
 /* ---------------- CARDS ---------------- */
@@ -244,63 +196,39 @@ nav.primary a:hover::after{width:100%}
   .card:nth-child(2){grid-column:3/span 1;grid-row:1/span 2;min-height:460px}
   .card:nth-child(3){grid-column:4/span 1;min-height:220px}
   .card:nth-child(4){grid-column:1/span 2;min-height:220px}
-  .card:nth-child(5){grid-column:4/span 1;min-height:140px}
 }
 
 .card{
-  position:relative;
-  background:var(--glass);
-  border-radius:var(--card-radius);
-  padding:var(--card-pad);
-  border:1px solid rgba(255,255,255,0.06);
-  box-shadow:0 30px 80px rgba(0,0,0,0.6);
+  background:var(--glass);border-radius:var(--card-radius);
+  padding:var(--card-pad);border:1px solid rgba(255,255,255,0.06);
+  box-shadow:0 30px 80px rgba(0,0,0,0.6);position:relative;
 }
 .card::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  border-radius:inherit;
-  padding:1px;
+  content:"";position:absolute;inset:0;border-radius:inherit;padding:1px;
   background:linear-gradient(135deg,#ff66c1,#ffd18c);
   -webkit-mask:linear-gradient(#fff 0 0) content-box,linear-gradient(#fff 0 0);
-  -webkit-mask-composite:xor;
-          mask-composite:exclude;
+  -webkit-mask-composite:xor;mask-composite:exclude;
 }
+
 .title-sub{
-  font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:1.25rem;
-  margin-bottom:12px;
-  background:var(--accent-grad);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  font-family:'Space Grotesk';font-weight:800;font-size:1.25rem;
+  margin-bottom:12px;background:var(--accent-grad);
+  -webkit-background-clip:text;-webkit-text-fill-color:transparent;
 }
+
 .kicker{
-  color:rgba(255,255,255,0.92);
-  line-height:1.7;
-  font-size:1rem;
+  color:rgba(255,255,255,0.92);line-height:1.7;font-size:1rem;
 }
 
 .cta-wrap{margin-top:18px}
 
-/* ------- BUTTON: SMALL ------- */
+/* ------- BUTTON ------- */
 .btn{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  padding:7px 16px;
-  border-radius:999px;
-  border:1px solid var(--btn-border);
-  background:rgba(255,255,255,0.05);
-  color:white;
-  font-family:'Space Grotesk';
-  font-weight:800;
-  font-size:0.88rem;
-  cursor:pointer;
-  text-decoration:none;
-  position:relative;
-  overflow:hidden;
-  width:auto;
+  display:inline-flex;align-items:center;justify-content:center;
+  padding:7px 16px;border-radius:999px;border:1px solid var(--btn-border);
+  background:rgba(255,255,255,0.05);color:white;
+  font-family:'Space Grotesk';font-weight:800;font-size:0.88rem;
+  cursor:pointer;text-decoration:none;position:relative;overflow:hidden;
   transition:.28s cubic-bezier(.2,.9,.2,1);
 }
 .btn .fill{
@@ -315,58 +243,36 @@ nav.primary a:hover::after{width:100%}
 }
 .btn:hover .fill{transform:scaleX(1)}
 
-/* ---------------- POPUP FORM ---------------- */
+/* ---------------- POPUP ---------------- */
 .overlay{
-  position:fixed;
-  inset:0;
-  display:none;
-  justify-content:center;
-  align-items:center;
-  background:rgba(0,0,0,.6);
-  backdrop-filter:blur(6px);
+  position:fixed;inset:0;display:none;
+  justify-content:center;align-items:center;
+  background:rgba(0,0,0,.6);backdrop-filter:blur(6px);
   z-index:7000;
 }
 .form-popup{
-  width:95%;
-  max-width:460px;
-  padding:28px;
-  border-radius:14px;
+  width:95%;max-width:460px;padding:28px;border-radius:14px;
   background:rgba(255,255,255,0.04);
   border:1px solid rgba(255,255,255,0.08);
 }
 .form-popup input,.form-popup textarea{
-  width:100%;
-  padding:12px 14px;
-  margin-bottom:12px;
-  border-radius:10px;
-  border:none;
-  background:rgba(255,255,255,0.06);
-  color:white;
+  width:100%;padding:12px 14px;margin-bottom:12px;border-radius:10px;
+  border:none;background:rgba(255,255,255,0.06);color:white;
 }
 .form-popup textarea{height:110px;resize:none}
 .close-btn{
-  position:absolute;
-  top:12px;
-  right:16px;
-  font-size:1.25rem;
-  cursor:pointer;
+  position:absolute;top:12px;right:16px;font-size:1.25rem;cursor:pointer;
 }
 
-footer{
-  text-align:center;
-  padding:30px 0;
-  color:rgba(255,255,255,0.75);
-  font-size:0.95rem;
-}
+footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0.95rem}
 </style>
 </head>
 
 <body>
 
-<!-- ---------------- NAV ---------------- -->
+<!-- NAV -->
 <div class="nav-wrap">
   <header class="nav">
-
     <div class="brand-wrap">
       <img src="studiologo.png" class="brand-logo">
       <div class="brand">StudioVyne</div>
@@ -381,17 +287,16 @@ footer{
       <div class="menu-line"></div>
       <div class="menu-line"></div>
     </div>
-
   </header>
 </div>
 
-<div class="mobile-menu" id="mobileMenu">
+<!-- FLOATING DROPDOWN -->
+<div class="mobile-dropdown" id="mobileDropdown">
   <a href="index.html">HOME</a>
   <a href="contact.html">HELP</a>
 </div>
 
-
-<!-- ---------------- HERO ---------------- -->
+<!-- HERO -->
 <section class="hero">
   <div class="hero-inner">
     <h1>Let's Connect</h1>
@@ -400,32 +305,25 @@ footer{
   </div>
 </section>
 
-<!-- ---------------- CONTACT SECTION ---------------- -->
+<!-- CONTENT -->
 <section class="section">
   <div class="title">Get In Touch</div>
   <div class="desc">We’re here to listen, discuss, and create — from ideas to strategy to final delivery.</div>
 
   <div class="cards">
 
-    <!-- 1 Mail Us -->
     <article class="card">
       <div class="title-sub">Mail Us</div>
       <div class="kicker">For inquiries and collaborations — we usually respond within a day.</div>
-      <div class="cta-wrap">
-        <button class="btn" id="openMailForm"><span class="fill"></span><span>Send Mail</span></button>
-      </div>
+      <div class="cta-wrap"><button class="btn" id="openMailForm"><span class="fill"></span><span>Send Mail</span></button></div>
     </article>
 
-    <!-- 2 WhatsApp -->
     <article class="card">
       <div class="title-sub">Chat on WhatsApp</div>
       <div class="kicker">Connect directly with a StudioVyne team member.</div>
-      <div class="cta-wrap">
-        <button class="btn" id="chatNow"><span class="fill"></span><span>Chat Now</span></button>
-      </div>
+      <div class="cta-wrap"><button class="btn" id="chatNow"><span class="fill"></span><span>Chat Now</span></button></div>
     </article>
 
-    <!-- 3 Reach Us -->
     <article class="card">
       <div class="title-sub">Reach Us</div>
       <div class="kicker">
@@ -435,16 +333,12 @@ footer{
       </div>
     </article>
 
-    <!-- 4 Services -->
     <article class="card">
       <div class="title-sub">Ready to Begin?</div>
       <div class="kicker">Explore our creative services — from branding to digital experience design.</div>
-      <div class="cta-wrap">
-        <a class="btn" href="index.html#services"><span class="fill"></span><span>See Services</span></a>
-      </div>
+      <div class="cta-wrap"><a class="btn" href="index.html#services"><span class="fill"></span><span>See Services</span></a></div>
     </article>
 
-    <!-- 5 Follow -->
     <article class="card">
       <div class="title-sub">Follow Us</div>
       <div class="kicker">Stay updated with our latest stories — Instagram · LinkedIn · Behance.</div>
@@ -453,11 +347,9 @@ footer{
   </div>
 </section>
 
-
 <footer>© 2025 StudioVyne — Crafted with care</footer>
 
-
-<!-- ---------------- POPUP ---------------- -->
+<!-- POPUP -->
 <div class="overlay" id="formOverlay">
   <div class="form-popup">
     <div class="close-btn" id="closeForm">×</div>
@@ -472,20 +364,36 @@ footer{
   </div>
 </div>
 
-
 <script>
 /* EMAILJS */
 emailjs.init("pHf4VY7iCqzN-DF4u");
 
-/* MOBILE MENU */
-const mb = document.getElementById('menuBtn');
-const mm = document.getElementById('mobileMenu');
-mb.addEventListener('click', () => {
-  mb.classList.toggle('active');
-  mm.classList.toggle('active');
+/* NEW FLOATING DROPDOWN LOGIC */
+const ham = document.getElementById("menuBtn");
+const dropdown = document.getElementById("mobileDropdown");
+
+ham.addEventListener("click", () => {
+  ham.classList.toggle("active");
+  dropdown.classList.toggle("active");
 });
 
-/* POPUP */
+/* Close when clicking a menu link */
+dropdown.querySelectorAll("a").forEach(link => {
+  link.addEventListener("click", () => {
+    ham.classList.remove("active");
+    dropdown.classList.remove("active");
+  });
+});
+
+/* Click outside to close */
+document.addEventListener("click", (e) => {
+  if (!ham.contains(e.target) && !dropdown.contains(e.target)) {
+    ham.classList.remove("active");
+    dropdown.classList.remove("active");
+  }
+});
+
+/* POPUP FORM */
 const overlay = document.getElementById('formOverlay');
 document.getElementById('openMailForm').addEventListener('click', () => overlay.style.display='flex');
 document.getElementById('closeForm').addEventListener('click', () => overlay.style.display='none');
@@ -498,7 +406,7 @@ document.getElementById('chatNow').addEventListener('click',()=>{
   window.open(`https://wa.me/${phone}?text=${msg}`,"_blank");
 });
 
-/* EMAIL SUBMIT */
+/* SEND EMAIL */
 document.getElementById('contactForm').addEventListener('submit',function(e){
   e.preventDefault();
   const d={
@@ -507,7 +415,11 @@ document.getElementById('contactForm').addEventListener('submit',function(e){
     message:document.getElementById('message').value
   };
   emailjs.send("service_40nob1a","template_ey58ghs",d)
-  .then(()=>{alert("Message sent!");overlay.style.display='none';this.reset();})
+  .then(()=>{
+    alert("Message sent!");
+    overlay.style.display='none';
+    this.reset();
+  })
   .catch(()=>alert("Failed to send. Try again."));
 });
 </script>
