--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
       <div class="text">
         <h2>Our Services</h2>
         <p>From branding and 3D visuals to cinematic storytelling — StudioVyne turns complexity into connection and impact.</p>
-        <button class="btn" onclick="window.location.href='services.html'"><span class="fill"></span><span>View Services</span></button>
+        <button class="btn" onclick="window.location.href='service.html'"><span class="fill"></span><span>View Services</span></button>
       </div>
     </div>
   </div>
