Update HELP link to point to help.html

--- a/contact.html
+++ b/contact.html
@@ -280,7 +280,7 @@ footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0
 
     <nav class="primary">
       <a href="index.html">HOME</a>
-      <a href="contact.html">HELP</a>
+      <a href="help.html">HELP</a>
     </nav>
 
     <div class="menu-btn" id="menuBtn">
@@ -293,7 +293,7 @@ footer{text-align:center;padding:30px 0;color:rgba(255,255,255,0.75);font-size:0
 <!-- FLOATING DROPDOWN -->
 <div class="mobile-dropdown" id="mobileDropdown">
   <a href="index.html">HOME</a>
-  <a href="contact.html">HELP</a>
+  <a href="help.html">HELP</a>
 </div>
 
 <!-- HERO -->
