--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ nav.primary a:hover{transform:translateY(-2px)}
 nav.primary a::after{content:"";position:absolute;bottom:-6px;left:0;height:3px;width:0%;background:linear-gradient(90deg,#ff66c1,#ffd18c);border-radius:4px;box-shadow:0 0 12px rgba(255,190,160,0.5);transition:width .35s}
 nav.primary a:hover::after{width:100%}
 
-/* ---------------- MOBILE FULL-WIDTH DROPDOWN ---------------- */
+/* ---------------- MOBILE MENU ---------------- */
 .menu-btn{width:34px;height:16px;display:none;flex-direction:column;justify-content:space-between;cursor:pointer}
 .menu-line{height:3px;background:white;border-radius:6px;transition:transform .35s ease,opacity .25s ease}
 .menu-btn.active .menu-line:nth-child(1){transform:translateY(6px) rotate(45deg)}
@@ -58,50 +58,41 @@ nav.primary a:hover::after{width:100%}
 
 .mobile-dropdown{
   position:fixed;
-  top:115px; /* slightly closer to navbar */
+  top:115px;
   left:50%;
   transform:translateX(-50%);
-  width:88%;               /* narrower */
-  max-width:820px;         /* smaller card width */
-
+  width:88%;
+  max-width:820px;
   background:rgba(255,255,255,0.015);
   backdrop-filter:blur(4px);
   -webkit-backdrop-filter:blur(4px);
-
   border:1px solid rgba(255,255,255,0.10);
-  border-radius:16px;      /* slightly smaller radius */
-
-  padding:14px 0;          /* MUCH smaller height */
+  border-radius:16px;
+  padding:14px 0;
   display:flex;
   flex-direction:column;
   align-items:center;
-  gap:10px;                /* spacing between HELP / CONTACT reduced */
-
+  gap:10px;
   opacity:0;
   pointer-events:none;
   transform-origin:top center;
   transform:translate(-50%, -12px);
   transition:opacity .22s ease, transform .22s ease;
-
   z-index:3000;
 }
-
 .mobile-dropdown.active{
   opacity:1;
   pointer-events:auto;
   transform:translate(-50%, 0);
 }
-
 .mobile-dropdown a{
   font-family:'Space Grotesk';
   font-weight:800;
-  font-size:0.95rem;   /* MUCH smaller text */
+  font-size:0.95rem;
   letter-spacing:1.4px;
   text-decoration:none;
   color:white;
 }
-
-
 
 /* ---------------- HERO ---------------- */
 .hero{display:grid;place-items:center;text-align:center;padding:160px 20px 100px;position:relative;z-index:2}
@@ -187,6 +178,8 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
     flex-direction: row-reverse;
   }
 }
+
+/* ---------------- MOBILE SPACING FIX (ADDED BY CHATGPT) ---------------- */
 @media (max-width:600px){
   .hero{padding-top:140px}
   .welcome{font-size:clamp(2.3rem,10vw,3.2rem)}
@@ -194,7 +187,68 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
   .hero-logo-wrap{width:110px;height:110px}
   .hero-logo{width:95px;height:95px}
   .socials a{width:58px;height:58px}
+
+  /* Support section gap fix */
+  .support h3 {
+    margin-bottom: 22px !important;
+  }
+
+  .support p {
+    margin-bottom: 32px !important;
+    line-height: 1.55 !important;
+    font-size: 1rem !important;
+  }
+
+  .socials {
+    margin-top: 10px !important;
+  }
 }
+
+/* -------------------------------------------------------- */
+/* ----------------- MOBILE VERTICAL IMAGES ---------------- */
+/* -------------------------------------------------------- */
+@media (max-width: 768px) {
+
+  /* Prevent zooming / cropping */
+  section.parallax {
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    background-position: center top !important;
+    background-attachment: scroll !important;
+    background-color: #000 !important;
+  }
+
+  /* HERO */
+  section.parallax:nth-of-type(1) {
+    background-image: url("https://plus.unsplash.com/premium_photo-1729862340088-f5dc8e32db9b?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0") !important;
+  }
+
+  /* ABOUT */
+  section.parallax:nth-of-type(2) {
+    background-image: url("https://plus.unsplash.com/premium_photo-1681494565222-f3ad2df26ab7?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0") !important;
+  }
+
+  /* SERVICES */
+  section.parallax:nth-of-type(3) {
+    background-image: url("https://plus.unsplash.com/premium_photo-1661306486457-f235f43c4eed?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0") !important;
+  }
+
+  /* HERO stays ✨CLEAN✨ (no dark box) */
+  .hero {
+    background: none !important;
+    backdrop-filter: none !important;
+    border-radius: 0 !important;
+    padding: 160px 20px 100px !important;
+  }
+
+  /* CARDS stay darkened */
+  .card {
+    background: rgba(0,0,0,0.55) !important;
+    backdrop-filter: blur(6px);
+    border: 1px solid rgba(255,255,255,0.08);
+  }
+}
+
 </style>
 </head>
 
@@ -217,7 +271,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
   </header>
 </div>
 
-<!-- FULL WIDTH DROPDOWN -->
+<!-- MOBILE DROPDOWN -->
 <div class="mobile-dropdown" id="mobileDropdown">
   <a href="help.html">HELP</a>
   <a href="contact.html">CONTACT</a>
@@ -226,7 +280,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
 <main>
 
 <!-- HERO -->
-<section class="parallax" style="background-image:url('https://images.unsplash.com/photo-1648365899122-baf94c9bb84a?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+<section class="parallax" style="background-image:url('https://images.unsplash.com/photo-1648365899122-baf94c9bb84a?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0');">
   <div class="hero">
     <div class="hero-logo-wrap"><img src="studiologo.png" class="hero-logo"></div>
     <div class="welcome">Welcome to StudioVyne</div>
@@ -310,7 +364,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
       <svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5.4A4.6 4.6 0 1016.6 12 4.6 4.6 0 0012 7.4z"/></svg>
     </a>
     <a href="https://www.linkedin.com" target="_blank">
-      <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.48 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.24 8H4.7v14H.24zM7.98 8h4.48v1.92h.06c.62-1.18 2.14-2.42 4.4-2.42 4.71 0 5.58 3.1 5.58 7.13V22H17.7v-6.8c0-1.62-.03-3.71-2.26-3.71-2.26 0-2.6 1.76-2.6 3.6V22H7.98z"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.48 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.24 8H4.7v14H.24zM7.98 8h4.48v1.92h.06c .62-1.18 2.14-2.42 4.4-2.42 4.71 0 5.58 3.1 5.58 7.13V22H17.7v-6.8c0-1.62-.03-3.71-2.26-3.71-2.26 0-2.6 1.76-2.6 3.6V22H7.98z"/></svg>
     </a>
     <a href="https://x.com" target="_blank">
       <svg viewBox="0 0 24 24"><path d="M22 5.92c-.64 .28-1.32 .47-2.04 .56 .73-.44 1.3-1.12 1.57-1.94-.68 .4-1.43 .7-2.24 .86A3.53 3.53 0 0012 8.53c0 .28 .03 .55 .09 .81C8.01 9.24 4.48 7.13 2.24 3.79c-.31 .54-.49 1.17-.49 1.84 0 1.27 .65 2.39 1.64 3.05-.6 -.02-1.16 -.18-1.65 -.45v .05c0 1.77 1.27 3.25 2.95 3.58-.39 .11-.8 .17-1.22 .17-.3 0-.59 -.03-.87 -.08 .59 1.83 2.3 3.16 4.33 3.2A7.08 7.08 0 012 19.54a9.95 9.95 0 005.39 1.58c6.46 0 9.99 -5.35 9.99 -9.99l -.01 -.45A7.09 7.09 0 0022 5.92z"/></svg>
@@ -352,12 +406,26 @@ gsap.utils.toArray(".card").forEach(card => {
   );
 });
 
-/* Parallax */
+/* Desktop Parallax */
 gsap.utils.toArray(".parallax").forEach(section=>{
   gsap.to(section,{backgroundPositionY:"40%",scrollTrigger:{trigger:section,scrub:true}});
 });
 
-/* NEW DROPDOWN TOGGLE */
+/* ---------------- MOBILE PARALLAX SIMULATION ---------------- */
+if (window.innerWidth < 768) {
+  gsap.utils.toArray("section.parallax").forEach(section => {
+    gsap.to(section, {
+      backgroundPositionY: "30%",
+      ease: "none",
+      scrollTrigger: {
+        trigger: section,
+        scrub: true
+      }
+    });
+  });
+}
+
+/* DROPDOWN TOGGLE */
 const ham = document.getElementById("hamburger");
 const dropdown = document.getElementById("mobileDropdown");
 
