--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
     <div class="hero-logo-wrap"><img src="studiologo.png" class="hero-logo" alt="StudioVyne logo"></div>
     <div class="welcome">Welcome to StudioVyne</div>
     <div class="slogan">CREATIVE STRATEGY THAT SELLS</div>
-    <button class="btn" onclick="window.location.href='portfolio.html'"><span class="fill"></span><span>Enquire Services</span></button>
+    <button class="btn" onclick="window.location.href='enquire.html'"><span class="fill"></span><span>Enquire Services</span></button>
   </div>
 </section>
 
